.provarCaches/00D410000011HE0EAM/objects/rstk__wopschdate__c.object
<CustomObject>
    <description>wopschdate__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>WO Operation Schedule Dates</relationshipLabel>
        <relationshipName>WO_Operation_Schedule_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_labhrsload__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Hours Loaded</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_machhrsload__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Machine Hours Loaded</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_oper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>WO Operation Schedule Dates</relationshipLabel>
        <relationshipName>WO_Operation_Schedule_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_ordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>WO Operation Schedule Dates</relationshipLabel>
        <relationshipName>WO_Operation_Schedule_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_priority__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Priority</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_priorityind_usrcntl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation Schedule Priority User Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_shopcal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WC Shop Calendar</label>
        <referenceTo>rstk__rtwctrshopcal__c</referenceTo>
        <relationshipLabel>WO Operation Schedule Dates</relationshipLabel>
        <relationshipName>wopschdates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site Master</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>WO Operation Schedule Dates</relationshipLabel>
        <relationshipName>WO_Operation_Schedule_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopschdate_wctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>WO Operation Schedule Dates</relationshipLabel>
        <relationshipName>WO_Operation_Schedule_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WO Operation Schedule Date</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Operation Schedule Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>